# proteia

./: .gitignore  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/adr/: 0001-gui-foundation-napari.md
src/proteia/: __init__.py
src/proteia/core/: __init__.py  analyze.py  boxes.py  grow.py  model.py  plotspec.py  project.py  quantify.py
src/proteia/gui/: __init__.py  app.py
src/proteia/viz/: __init__.py  render.py
tests/: test_analyze.py  test_boxes.py  test_grow.py  test_model.py  test_plotspec.py  test_project.py  test_quantify.py  test_smoke.py
