[project]
name = "proteia"
version = "0.1.0"
description = "Western blot analysis from raw scan to publication-ready insight."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "Roger Huang" }]
dependencies = [
    "napari[pyside6]>=0.7",
    "numpy>=2.1",
    "scikit-image>=0.25",
    "scipy>=1.14",
    "tifffile>=2024.8",
]

[project.urls]
Homepage = "https://github.com/lavandula-bio/proteia"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proteia"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
